# ai-rpa

./: .gitignore  README.md  pyproject.toml
src/ai_rpa/: __init__.py  __main__.py  cli.py  config.py
src/ai_rpa/engine/: ai_client.py  prompt_builder.py  script_generator.py
src/ai_rpa/executor/: listener.py  result_parser.py  suite_runner.py
src/ai_rpa/pattern_store/: __init__.py
src/ai_rpa/registry/: keyword_registry.py  library_scanner.py  registry_cache.py
src/ai_rpa/scenarios/: browser.py  office.py  scenario_matcher.py
